feat: update tmux config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,12 +1,10 @@
-source-file ~/.config/tmux/tmux.reset.conf
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+# unbind default and set prefix
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-set -g prefix ^A
-set -g base-index 1              # start indexing windows at 1 instead of 0
+# gloal settings
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
-set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status-position bottom   
@@ -14,36 +12,62 @@ set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g allow-rename off # stop tmux for selecting names for windows for you
 
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
+## Keybindings
+# NOTE: First remove *all* keybindings with unbind-key -a
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'omerxx/tmux-floax'
-set -g @floax-width '80%'
-set -g @floax-height '80%'
-set -g @floax-border-color 'magenta'
-set -g @floax-text-color 'blue'
-set -g @floax-bind 'p'
-set -g @floax-change-path 'false'
-set -g @sessionx-auto-accept 'off'
-set -g @sessionx-custom-paths '/Users/imperial/dotfiles'
-set -g @sessionx-bind 'o'
-set -g @sessionx-x-path '~/dotfiles'
-set -g @sessionx-window-height '85%'
-set -g @sessionx-window-width '75%'
-set -g @sessionx-zoxide-mode 'on'
-set -g @sessionx-custom-paths-subdirectories 'false'
-set -g @sessionx-filter-current 'false'
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
+# Creation, deletion and renaming
+bind n new-window
+bind N new-session
+bind r command-prompt "rename-window %%"
+bind R command-prompt "rename-session %%"
+bind - split-window -v 
+bind | split-window -h
+bind c kill-pane
 
-run '~/.tmux/plugins/tpm/tpm'
+# Navigation
+bind S choose-session
+
+bind H previous-window
+bind L next-window
+bind ^A last-window
+bind w list-windows
+
+bind x swap-pane -D
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Resize 
+bind z resize-pane -Z
+
+# Refresh and commands
+bind i source-file ~/.config/tmux/tmux.conf
+bind : command-prompt
+bind ^L refresh-client
+bind l refresh-client
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'fg=purple'
+
+set -g status-left ''
+set -g status-left-length 10
+
+set -g status-right-style 'fg=black bg=purple'
+set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right-length 50
+
+setw -g window-status-current-style 'fg=black bg=purple'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=green bg=black'
+setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
+
+setw -g window-status-bell-style 'fg=black bg=green'
+
+# messages
+set -g message-style 'fg=yellow bg=red bold'
