Some fresh new features and too lazy to write them

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,9 +10,10 @@ set -g set-clipboard on          # use system clipboard
 set -g status-position bottom   
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
+setw -g mouse on
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
-set -g allow-rename off # stop tmux for selecting names for windows for you
+#set -g allow-rename on # stop tmux for selecting names for windows for you
 
 ## Keybindings
 # NOTE: First remove *all* keybindings with unbind-key -a
@@ -47,27 +48,11 @@ bind z resize-pane -Z
 bind i source-file ~/.config/tmux/tmux.conf
 bind : command-prompt
 bind ^L refresh-client
-bind l refresh-client
 
 # statusbar
 set -g status-position bottom
-set -g status-justify left
 set -g status-style 'fg=purple'
 
-set -g status-left ''
-set -g status-left-length 10
-
-set -g status-right-style 'fg=black bg=purple'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-
 setw -g window-status-current-style 'fg=black bg=purple'
-setw -g window-status-current-format ' #I #W #F '
 
 setw -g window-status-style 'fg=green bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
-
-setw -g window-status-bell-style 'fg=black bg=green'
-
-# messages
-set -g message-style 'fg=yellow bg=red bold'
