--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,15 +5,22 @@ bind-key C-a send-prefix
 
 # gloal settings
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
-set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status-position bottom   
-set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 setw -g mouse on
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
-#set -g allow-rename on # stop tmux for selecting names for windows for you
+
+# TMP Plugins
+# Make sure to run "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm" 
+# on a new device 
+# IMPORTANT! use prefix I
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
+set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @kanagawa-theme 'wave'
+
+# statusbar
+set -g status-position top
 
 ## Keybindings
 # NOTE: First remove *all* keybindings with unbind-key -a
@@ -49,10 +56,5 @@ bind i source-file ~/.config/tmux/tmux.conf
 bind : command-prompt
 bind ^L refresh-client
 
-# statusbar
-set -g status-position bottom
-set -g status-style 'fg=purple'
-
-setw -g window-status-current-style 'fg=black bg=purple'
-
-setw -g window-status-style 'fg=green bg=black'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
